welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
}

def arriver() : Boolean {
	if (estFaceMur() && getDirection() == Direction.EST){
    gauche();
    if (estFaceMur()){
      droite()
      return true
    }
  }
  return false
}


